[package]
name = "firebase-token"
version = "0.2.0"
authors = ["Bob <bob22.zhang@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A firebase ID token validator written in Rust."
documentation = "https://docs.rs/firebase-token"
repository = "https://github.com/bob22z/firebase-token"
keywords = ["firebase", "token", "validate"]

[dependencies]
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14" }
log = "0.4"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros"] }
